added support for StartOnMainThread option